istio/wordpress.virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: wordpress-virtual-service
  namespace: istio-system
spec:
  hosts:
    - "wordpress.t3.superproject.local"
  gateways:
    - istio-gateway
  http:
    - name: wordpress
      match: 
      - uri:
          prefix: /
      route:
        - destination:
            host: wordpress.wordpress.svc.cluster.local
            port:
              number: 80
      timeout: 30s
